[package]
name = "can-bittiming-rs"
version = "0.1.0"
edition = "2024"
description = "Computes the value of BTR (register bit timing register) of a can device."
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.53", features = ["cargo", "derive"]}
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
